--- a/src/app/demo/pages/dashboard/dashboard.component.html
+++ b/src/app/demo/pages/dashboard/dashboard.component.html
@@ -20,11 +20,11 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Receita</span>
-                    <div class="text-900 font-medium text-xl">R$2.100</div>
+                    <div class="text-900 font-medium text-xl">R$2.100,00</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-map-marker text-orange-500 text-xl"></i>
+                    <i class="pi pi-dollar text-orange-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">%52+ </span>
@@ -35,16 +35,16 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Clientes</span>
-                    <div class="text-900 font-medium text-xl">32</div>
+                    <span class="block text-500 font-medium mb-3">Custos</span>
+                    <div class="text-900 font-medium text-xl">R$1.650,47</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-percentage text-cyan-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">3 </span>
-            <span class="text-500">novos registrados</span>
+            <span class="text-green-500 font-medium">%21+ </span>
+            <span class="text-500">desde a última semana</span>
         </div>
     </div>
     <div class="col-12 md:col-6 xl:col-3">
