--- a/src/app/demo/pages/dashboard/dashboard.component.html
+++ b/src/app/demo/pages/dashboard/dashboard.component.html
@@ -246,7 +246,7 @@
                 <div class="font-medium text-xl">Estatísticas mais detalhadas das vendas</div>
             </div>
             <div class="mt-4 mr-auto md:mt-0 md:mr-0">
-                <a href="/"
+                <a href="/uikit/charts"
                     class="p-button font-bold px-5 py-3 text-white button-rounded p-button-raised">
                     Acessar Relatório
                 </a>
