--- a/src/app/demo/pages/pages/empty/emptydemo.component.html
+++ b/src/app/demo/pages/pages/empty/emptydemo.component.html
@@ -1,8 +1,8 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <h4>Empty Page</h4>
-            <p>This is your empty page template to start building beautiful applications.</p>
+            <h4>Pedidos - Em breve</h4>
+            <p>Página de pedidos que será desenvolvido.</p>
         </div>
     </div>
 </div>
